[package]
name = "menu-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
unicode-width = "0.1"
